--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,18 @@ services:
       - postgres_volume:/var/lib/postgresql/data
     ports:
       - 5432:5432
-  
+
+  rabbitmq:
+    image: rabbitmq:3.13-management-alpine
+    environment:
+      - RABBITMQ_DEFAULT_USER=user
+      - RABBITMQ_DEFAULT_PASS=password
+    volumes:
+      - rabbitmq_volume:/var/lib/rabbitmq
+    ports:
+      - 5672:5672
+      - 15672:15672
+
 volumes:
   postgres_volume:
+  rabbitmq_volume:
